# python-klabclient

./: .gitignore  App_installation.md  README.md  config.yaml.example  requirements.txt  setup.cfg  test-requirements.txt  tests.sh  tox.ini
dealerclient/: __init__.py  exceptions.py  shell.py  utils.py
dealerclient/api/: app_tasks.py  apps.py  base.py  charts.py  client.py  clusters.py  httpclient.py  models.py  organizations.py  projects.py  sharedclusters.py  storage.py  workspaces.py
dealerclient/commands/: app_tasks.py  apps.py  base.py  charts.py  clusters.py  models.py  organizations.py  projects.py  sharedclusters.py  storage.py  workspaces.py
dealerclient/tests/unit/: base.py  base_shell_test.py  test_client.py  test_httpclient.py  test_shell.py  test_utils.py
dealerclient/tests/unit/tests/: test_cli_bash_completion.py  test_cli_workspaces.py  test_workspaces.py
klabclient/: __init__.py  exceptions.py  shell.py  utils.py
klabclient/api/: app_tasks.py  apps.py  base.py  charts.py  client.py  clusters.py  datasets.py  httpclient.py  models.py  organizations.py  projects.py  sharedclusters.py  storage.py  workspaces.py
klabclient/commands/: app_tasks.py  apps.py  base.py  charts.py  clusters.py  datasets.py  models.py  organizations.py  projects.py  sharedclusters.py  storage.py  workspaces.py
klabclient/tests/unit/: base.py  base_shell_test.py  test_client.py  test_httpclient.py  test_shell.py  test_utils.py
klabclient/tests/unit/tests/: test_cli_bash_completion.py  test_cli_workspaces.py  test_workspaces.py
