[metadata]
name = python-klabclient
summary = Kuberlab API Client Library
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Nikolay Makhotkin
author-email = nikolay.makhotkin@gmail.com

[files]
packages =
    klabclient

[entry_points]
console_scripts =
    klab = klabclient.shell:main

[nosetests]
cover-package = klabclient

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext

[pbr]
autodoc_index_modules = True
warnerrors = True

[bdist_wheel]
universal=1
